--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conversor de Moneda</title>
+  <title>Configurar Tasas de Cambio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Conversor de Moneda 💰</h1>
-    <div class="converter">
-      <input type="number" id="amount" placeholder="Introduce la cantidad">
-      <select id="fromCurrency">
-        <option value="USD">Dólar (USD)</option>
-        <option value="EUR">Euro (EUR)</option>
-        <option value="MXN">Peso Mexicano (MXN)</option>
-      </select>
-      <select id="toCurrency">
-        <option value="USD">Dólar (USD)</option>
-        <option value="EUR">Euro (EUR)</option>
-        <option value="MXN">Peso Mexicano (MXN)</option>
-      </select>
-      <button id="convertButton">Convertir</button>
-      <div id="result"></div>
-    </div>
+    <h1>Configurar Tasas de Cambio 💰</h1>
+    <form id="exchangeRateForm">
+      <div>
+        <label for="usdRate">Bolívares a Dólar (VES → USD):</label>
+        <input type="number" id="usdRate" placeholder="Ejemplo: 56.65" required>
+      </div>
+      <div>
+        <label for="eurRate">Bolívares a Euro (VES → EUR):</label>
+        <input type="number" id="eurRate" placeholder="Ejemplo: 59.34" required>
+      </div>
+      <button type="submit">Guardar y Continuar</button>
+    </form>
   </div>
   <script src="script.js"></script>
 </body>
