permite colocar tasas con decimales

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <form id="exchangeRateForm">
       <div>
         <label for="usdRate">Bolívares a Dólar (VES → USD):</label>
-        <input type="number" id="usdRate" placeholder="Ejemplo: 56.65" required>
+        <input type="number" step="0.01" id="usdRate" placeholder="Ejemplo: 56.65" required>
       </div>
       <div>
         <label for="eurRate">Bolívares a Euro (VES → EUR):</label>
-        <input type="number" id="eurRate" placeholder="Ejemplo: 59.34" required>
+        <input type="number" step="0.01" id="eurRate" placeholder="Ejemplo: 59.34" required>
       </div>
       <button type="submit">Guardar y Continuar</button>
     </form>
