--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>Configurar Tasas de Cambio 💰</h1>
+    <h1>Configurar Tasas 💰</h1>
     <form id="exchangeRateForm">
-      <div>
-        <label for="usdRate">Bolívares a Dólar (VES → USD):</label>
-        <input type="number" step="0.01" id="usdRate" placeholder="Ejemplo: 56.65" required>
-      </div>
-      <div>
-        <label for="eurRate">Bolívares a Euro (VES → EUR):</label>
-        <input type="number" step="0.01" id="eurRate" placeholder="Ejemplo: 59.34" required>
-      </div>
+      <label for="usdRate">Bolívares a Dólar (VES → USD):</label>
+      <input type="number" step="0.01" id="usdRate" placeholder="Ejemplo: 56.65" required>
+      
+      <label for="eurRate">Bolívares a Euro (VES → EUR):</label>
+      <input type="number" step="0.01" id="eurRate" placeholder="Ejemplo: 59.34" required>
+      
       <button type="submit">Guardar y Continuar</button>
     </form>
   </div>
